--- a/hater-hack/views/login.ejs
+++ b/hater-hack/views/login.ejs
@@ -1,7 +1,12 @@
-<form action="/auth/login" method="post">
-  <label for="name">Nombre:</label>
-  <input type="text" name="name">
-  <label for="password">Contraseña:</label>
-  <input type="text" name="password">
-  <input type="submit" value="Entrar">
-</form>
+<div class="login">
+  <h1 class="title">Hater<span>Hack</span></h1>
+  <h2>Ah, ¿otra vez tú?</h2>
+  <form action="/auth/login" method="post">
+    <label for="name">Nombre:</label>
+    <input type="text" name="name">
+    <label for="password">Contraseña:</label>
+    <input type="password" name="password">
+    <button type="submit">Entrar</button>
+  </form>
+  <a href="/auth/register">¿No tienes cuenta?</a>
+</div>
