--- a/hater-hack/views/register.ejs
+++ b/hater-hack/views/register.ejs
@@ -2,6 +2,6 @@
   <label for="name">Nombre:</label>
   <input type="text" name="name">
   <label for="password">Contraseña:</label>
-  <input type="text" name="password">
+  <input type="password" name="password">
   <input type="submit" value="Registrar">
 </form>
