--- a/hater-hack/views/layout/layout.ejs
+++ b/hater-hack/views/layout/layout.ejs
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>HaterHack</title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
+    <link href="https://fonts.googleapis.com/css?family=Roboto:100,400,700,900&amp;subset=latin-ext" rel="stylesheet">
   </head>
   <body>
     <%- body %>
