--- a/hater-hack/views/register.ejs
+++ b/hater-hack/views/register.ejs
@@ -1,7 +1,18 @@
-<form action="/auth/register" method="post">
-  <label for="name">Nombre:</label>
-  <input type="text" name="name">
-  <label for="password">Contraseña:</label>
-  <input type="password" name="password">
-  <input type="submit" value="Registrar">
-</form>
+<div class="login">
+  <h1 class="title">Hater<span>Hack</span></h1>
+  <h2>Ah, ¿que quieres entrar?</h2>
+  <form action="/auth/register" method="post">
+    <label for="name">Nombre:</label>
+    <input type="text" name="name">
+    <p><% if (locals.message){ %>
+      <%= locals.message %>
+    <% } %></p>
+    <label for="password">Contraseña:</label>
+    <input type="password" name="password">
+    <p><% if (locals.message){ %>
+      <%= locals.message %>
+    <% } %></p>
+    <button type="submit">Entrar</button>
+  </form>
+  <a href="/auth/login">¿Ya tienes cuenta?</a>
+</div>
