--- a/hater-hack/views/partials/navbar.ejs
+++ b/hater-hack/views/partials/navbar.ejs
@@ -2,4 +2,6 @@
 <div class="navbar">
   <img src="<%= currentUser.avatar %>">
   <h2><%= currentUser.username %></h2>
+  <a href="/auth/logout">Logout</a>
+  <a href="/post/new">Nueva entrada</a>
 </div>
