--- a/hater-hack/views/posts/newpost.ejs
+++ b/hater-hack/views/posts/newpost.ejs
@@ -3,6 +3,6 @@
   <input type="text" name="title">
   <label for="text">Text</label>
   <textarea name="text"></textarea>
-  <%- include partials/errors.ejs %>
+  <%- include ../partials/errors.ejs %>
   <input type="submit" value="Llorar">
 </form>
