--- a/hater-hack/views/index.ejs
+++ b/hater-hack/views/index.ejs
@@ -1,2 +1,11 @@
-<%- include partials/navbar %>
-<%= post %>
+<div class="main-container">
+  <%- include partials/navbar %>
+  <% post.forEach(post => { %>
+  <div class="post">
+    <div><%= post.title %></div>
+    <div><%= post.text %></div>
+    <div><%= post.author %></div>
+    <div><%= post.date %></div>
+    </div>
+  <% }) %>
+</div>
