--- a/hater-hack/views/index.ejs
+++ b/hater-hack/views/index.ejs
@@ -5,7 +5,7 @@
     <div class="post">
       <div><%= post.title %></div>
       <div><%= post.text %></div>
-      <div><%= post.author %></div>
+      <div><%= post.author.username%></div>
       <div><%= post.date %></div>
       </div>
     <% }) %>
