--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,10 +3,11 @@
   <div class="post-container">
     <% post.forEach(post => { %>
     <div class="post">
-      <div><%= post.title %></div>
-      <div><%= post.text %></div>
-      <div><%= post.author.username%></div>
+      <div><a href="/post/<%= post._id %>"><%= post.title %></a></div>
+      <div><a href="/profile/<%= post.author._id%>"><%= post.author.username%></a></div>
       <div><%= post.date %></div>
+      <div><%= post.text %></div>
+      <div><%= post.hateButtons %></div>
       </div>
     <% }) %>
   </div>
