--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -4,4 +4,5 @@
   <h2><%= currentUser.username %></h2>
   <a href="/auth/logout">Logout</a>
   <a href="/post/new">Nueva entrada</a>
+  <a href="/profile/<%= currentUser._id %>">Tu perfil</a>
 </div>
