--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,4 +1,4 @@
-<script src="/javascripts/navbar.js"></script>
+<div class="burger"></div>
 <div class="navbar">
   <img src="<%= currentUser.avatar %>">
   <h2><%= currentUser.username %></h2>
