--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,11 +3,13 @@
   <div class="post-container">
     <% post.forEach(post => { %>
     <div class="post">
-      <div><a href="/post/<%= post._id %>"><%= post.title %></a></div>
-      <div><a href="/profile/<%= post.author._id%>"><%= post.author.username%></a></div>
-      <div><%= post.date %></div>
-      <div><%= post.text %></div>
-      <div>
+      <div class="post-title"><a href="/post/<%= post._id %>"><%= post.title %></a></div>
+      <div class="post-info">
+        <div class="post-author"><a href="/profile/<%= post.author._id%>"><%= post.author.username%></a></div>
+        <div class="post-date"><%= post.date %></div>
+      </div>
+      <div class="post-text"><%= post.text %></div>
+      <div class="post-buttons">
         <form action="/<%= post._id %>" method="post">
           <label for="a"><%= post.hateButtons.buttonA %></label>
           <button name="button" value="a" type="submit"><img src="/images/pizza.png" alt=""></button>
