--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -80,7 +80,50 @@ a {
   margin:20px 20px 20px 70px;
   color:black;
   padding:15px;
+  border-radius: 15px;
+  /* display: flex;
+  flex-direction: column; */
 }
+
+.post .main-title {
+  font-size: 25px;
+  text-decoration: none
+}
+
+.post .info-container {
+  display: inline-block;
+  margin-bottom: 20px;
+}
+
+.info-container p {
+  display: inline-block;
+  font-size: 13px;
+}
+
+.post .main-author {
+  display: inline-block;
+  font-size: 13px;
+  margin-left: 5px;
+
+}
+
+.post .author-link {
+  font-size: 13px;
+  text-decoration: none;
+}
+
+.info-container .date {
+  font-size: 13px;
+  margin-right: 5px;
+  margin-bottom: 5px;
+  color: rgb(60, 80, 80)
+}
+
+.post .main-text {
+  margin-bottom: 20px;
+  font-size: 16px;
+}
+
 /** ---- navbar ---- */
 .burger{
   width:50px;
