upload images done

--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -6,6 +6,7 @@
     <h2><%= currentUser.username %></h2>
     <a href="/auth/logout">Logout</a>
     <a href="/post/new">Nueva entrada</a>
-    <a href="/profile/<%= currentUser._id %>">Tu perfil</a>
+    <a href="/profile/<%= currentUser._id %>">Ver tu perfil</a>
+    <a href="/profile/<%= currentUser._id %>/edit">Edita tu perfil</a>
   </div>
 </div>
