posts routes fix

--- a/views/posts/newpost.ejs
+++ b/views/posts/newpost.ejs
@@ -5,4 +5,5 @@
   <textarea name="text"></textarea>
   <%- include ../partials/errors.ejs %>
   <input type="submit" value="Llorar">
+  <a href="/">Back</a>
 </form>
