--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -2,11 +2,15 @@
 <div class="navbar">
   <div class="nav-close">X</div>
   <div class="nav-container">
-    <img src="<%= currentUser.avatar %>">
-    <h2><%= currentUser.username %></h2>
-    <a href="/auth/logout">Logout</a>
-    <a href="/post/new">Nueva entrada</a>
-    <a href="/profile/<%= currentUser._id %>">Ver tu perfil</a>
-    <a href="/profile/<%= currentUser._id %>/edit">Edita tu perfil</a>
+    <div>
+      <img src="<%= currentUser.avatar %>">
+    </div>
+    <div>
+      <h2><%= currentUser.username %></h2>
+      <a href="/auth/logout">Logout</a>
+      <a href="/post/new">Nueva entrada</a>
+      <a href="/profile/<%= currentUser._id %>">Ver tu perfil</a>
+      <a href="/profile/<%= currentUser._id %>/edit">Edita tu perfil</a>
+    </div>
   </div>
 </div>
