--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,7 +1,7 @@
 <div class="login">
   <h1 class="title">Hater<span>Hack</span></h1>
   <h2>Ah, ¿otra vez tú?</h2>
-  <form action="/auth/login" method="post" enctype="multipart/form-data">
+  <form action="/auth/login" method="post">
     <label for="name">Nombre:</label>
     <input type="text" name="name">
     <p><% if (locals.message){ %>
