--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,13 +16,13 @@
       <hr>
       <div class="post-buttons">
         <form action="/<%= post._id %>" method="post">
-          <label for="a"><%= post.hateButtons.buttonA %></label>
+          <label for="a" id="<%= post._id %>"><%= post.hateButtons.buttonA %></label>
           <button name="button" value="a" type="submit"><img src="/images/pizza.png" alt=""></button>
-          <label for="b"><%= post.hateButtons.buttonB %></label>
+          <label for="b" id="<%= post._id %>"><%= post.hateButtons.buttonB %></label>
           <button name="button" value="b" type="submit"><img src="/images/balloon.png" alt=""></button>
-          <label for="c"><%= post.hateButtons.buttonC %></label>
+          <label for="c" id="<%= post._id %>"><%= post.hateButtons.buttonC %></label>
           <button name="button" value="c" type="submit"><img src="/images/baby-cry.png" alt=""></button>
-          <label for="d"><%= post.hateButtons.buttonD %></label>
+          <label for="d" id="<%= post._id %>"><%= post.hateButtons.buttonD %></label>
           <button name="button" value="d" type="submit"><img src="/images/blackboard.png" alt=""></button>
         </form>
       </div>
@@ -30,3 +30,16 @@
     <% }) %>
   </div>
 </div>
+
+<script>
+  const label = document.querySelectorAll('label');
+
+  axios.get('/api/likes')
+  .then(posts => {
+    console.log(posts) 
+  })
+  .catch(error => {
+    console.log(error)
+  })
+
+</script>
